--- a/arch/package.json
+++ b/arch/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",        
     "test": "echo \"No test specified\" && exit 1"
   },
-  "author": "Your Name",
+  "author": "Ahmad<ahmadbrainworks@gmail.com>, Musaiyib<myusoro@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -20,8 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.452.0",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7",
-    "react-contenteditable": "^3.3.5"    
+    "tailwindcss-animate": "^1.0.7"  
   },
   "devDependencies": {
     "typescript": "^5.1.0",               
@@ -33,5 +32,17 @@
   ],
   "directories": {
     "lib": "lib"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahmadbrainworks/strano-ui/components"
+  },
+"keywords": [
+    "ui",
+    "radix-ui",
+    "shadcn",
+    "shadcn-ui",
+    "react",
+    "reactjs"
+  ]
 }
