--- a/arch/package.json
+++ b/arch/package.json
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahmadbrainworks/strano-ui/components"
+    "url": "https://github.com/ahmadbrainworks/strano-ui/<tree-url-here>"
   },
 "keywords": [
     "ui",
