--- a/arch/tsconfig.json
+++ b/arch/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "moduleResolution": "node"
   },
-  "include": ["src"],
+  "include": ["src", "src/lib"],
   "exclude": ["node_modules", "dist"]
 }
+ 
