--- a/typography/package.json
+++ b/typography/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@strano-ui/typography",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Typography components based on Radix UI for React",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",
     "test": "echo \"No test specified\" && exit 1"
   },
-  "author": "Ahmad <ahmadbrainworks@gmail.com>",
+  "author": "Ahmad <ahmadbrainworks@gmail.com>, Musaiyib<myusoro@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "clsx": "^2.1.1",
@@ -34,6 +34,10 @@
   },
   "keywords": [
     "ui",
-    "strano"
+    "radix-ui",
+    "shadcn",
+    "shadcn-ui",
+    "react",
+    "reactjs"
   ]
 }
