--- a/components/package.json
+++ b/components/package.json
@@ -15,10 +15,11 @@
   "author": "Ahmad <ahmadbrainworks@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.0", 
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "rimraf": "6.0.1",
