--- a/typography/package.json
+++ b/typography/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "clsx": "^2.1.1",
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "rimraf": "6.0.1",
